[package]
name = "qiiterm"
version = "0.1.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "0.7.0"
serde_json = "1.0"
termion = "1.5.5"
