[package]
name = "qiiterm"
version = "0.0.1"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
repository = "https://github.com/ksk001100/qiiterm"
keywords = ["tui", "qiita"]
license-file = "LICENSE"
readme = "README.md"
description = "[WIP] Qiita TUI client"

[dependencies]
tui = "0.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
termion = "1.5"
