[package]
name = "qiiterm"
version = "0.0.1"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
repository = "https://github.com/ksk001100/qiiterm"
keywords = ["tui", "qiita"]
license-file = "LICENSE"
readme = "README.md"
description = "[WIP] Qiita TUI client"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
termimad = "0.10"
ansi4tui = "0.2"
